# CPX-SDSM

./: .gitignore  Makefile  README.md  claude.md  run_all_non_ros.sh  run_experiments.py  run_in_terminal.sh  setup_env.sh
Veins_Simulation/: .cproject  .oppbuildspec  README
msg/: DetectedObjectCommonData.msg  DetectedObjectData.msg  DetectedVRUData.msg  DetectedVehicleData.msg  ObstacleSize.msg  SensorDataSharingMessage.msg  VehicleSize.msg
ros2_ws/src/CPX-SDSM/: README.md  package.xml
ros2_ws/src/CPX-SDSM/msg/: DetectedObjectCommonData.msg  DetectedObjectData.msg  DetectedObstacleData.msg  DetectedVRUData.msg  DetectedVehicleData.msg  Position3D.msg  SensorDataSharingMessage.msg  VehicleSize.msg
ros2_ws/src/veins_ros_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/veins_ros_bridge/veins_ros_bridge/: __init__.py  udp_bridge_node.py
scripts/: shrink_rx_csv.py
simulations/: config.xml  omnetpp.ini
simulations/apps/: RosSDSMApp.ned
simulations/networks/: TwoCarsScenario.ned
src/: Makefile  RosSDSMApp.cc  RosSDSMApp.h
src/messages/: SdsmPayload.msg  SdsmPayload_m.cc  SdsmPayload_m.h
sumo/: build_net.bat  build_net.sh  gen_ucla_routes.py  routes.rou.xml  scenario.sumo.cfg
sumo/net/: edges.edg.xml  nodes.nod.xml  ucla_v2_final.net.xml
veins_ros/: .cproject  .oppbuildspec  .project  CMakeLists.txt  Makefile  README.md
veins_ros/ros/ROS/: DDateTime.msg
veins_ros/ros/ROS/msg/: ObstacleSize.msg  PositionConfidenceSet.msg  PositionOffsetXYZ.msg
