<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sdsm_msgs</name>
  <version>0.1.0</version>
  <description>
    ROS 2 message definitions for SAE J3224 Sensor Data Sharing Message (SDSM).
    Implements GREEN-priority fields from the SDSM-ROS mapping specification.
  </description>
  <maintainer email="lab@example.edu">Lab Maintainer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
