<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>veins_ros_bridge</name>
  <version>0.1.0</version>
  <description>UDP bridge between Veins simulation and ROS 2. Uses sdsm_msgs (CPX-SDSM) as the message foundation.</description>
  <maintainer email="lab@example.edu">Lab Maintainer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sdsm_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
